--- a/profile/certifications.qmd
+++ b/profile/certifications.qmd
@@ -3,6 +3,7 @@ title: "Certificações e Experiências Complementares"
 # image: profile/profile.png
 about: # https://quarto.org/docs/websites/website-about.html
   template: jolla
+lang: pt-br
 editor: 
   markdown: 
     wrap: 72
