--- a/index.qmd
+++ b/index.qmd
@@ -22,9 +22,9 @@ about: # https://quarto.org/docs/websites/website-about.html
 *"Oi, eu sou o Estéfano!"*
 
 Este é o espaço no qual compartilho um pouco da minha jornada até aqui, além de
-algumas coisas sobre Estatística, Ciência de Dados, Machine Learning e outras
-coisas que (provavelmente) só eu acompanho, mas fique à vontade para também me
-seguir nesta jornada.
+alguns tópicos interessantes sobre Estatística, Ciência de Dados, Machine
+Learning e outras coisas que (provavelmente) só eu acompanho. Fique à 
+vontade para me seguir nesta jornada!
 
 Sou estatístico formado desde 2006 (mais exatamente, desde janeiro de 2007,
 quando houve a colação de grau oficial) pelo IME-USP, onde também fiz Mestrado
@@ -33,9 +33,15 @@ Estocásticos baseados em Sistemas Markovianos de Partículas.
 
 Durante o Bacharelado em Estatística, tive minha primeira experiência prática
 com modelos de árvores de decisão, assim como meu primeiro contato com a
-linguagem R, que já dava seus primeiros passos como uma ferramenta de análise e
-modelagem de dados. Com o tempo, fui aprendendo outras linguagens para a
+linguagem R, que já dava seus primeiros passos como uma ferramenta para análise
+e modelagem de dados. Com o tempo, fui aprendendo outras linguagens para a
 realização de diversas tarefas relacionadas à Ciência de Dados.
+
+Desde 2014, trabalho de forma direta com análise de dados e dou consultoria e
+treinamento concentrados no portfólio da família IBM SPSS. Além das linguagens
+nativas do SPSS Statistics e do SPSS Modeler, também há a possibilidade de
+integrar estes dois *softwares* com códigos escritos em Python e R, permitindo
+o desenvolvimento e manutenção de aplicações baseadas nessas linguagens.
 
 <!-- ## Education -->
 
